[gd_scene load_steps=24 format=3 uid="uid://ck01ccnup06bb"]

[ext_resource type="Texture2D" uid="uid://c1q710xdlpnp0" path="res://scenes/dev/ZXue/SettingScene/Assets/General/GeneralSettingScene.png" id="1_2uunf"]
[ext_resource type="Script" uid="uid://ci2p324tsrsjb" path="res://scenes/dev/ZXue/SettingScene/setting_scene.gd" id="1_tgnwa"]
[ext_resource type="Texture2D" uid="uid://bm4pvdhu8mxw8" path="res://scenes/dev/ZXue/SettingScene/Assets/Level1/GenericMenu.png" id="2_uxu67"]
[ext_resource type="Texture2D" uid="uid://dv0x6nvc7tr14" path="res://scenes/dev/ZXue/SettingScene/Assets/Level1/WindowSettingIcon.png" id="3_hax4q"]
[ext_resource type="Texture2D" uid="uid://dekhtnc6duqyb" path="res://scenes/dev/ZXue/SettingScene/Assets/Level1/GraphicsSettingIcon.png" id="4_2lid6"]
[ext_resource type="Texture2D" uid="uid://bu785lwf2x6cs" path="res://scenes/dev/ZXue/SettingScene/Assets/Level1/WindowSettingText.png" id="4_18hri"]
[ext_resource type="Texture2D" uid="uid://c223wvbfvl8yy" path="res://scenes/dev/ZXue/SettingScene/Assets/Level1/GenericMenuSelected.png" id="4_u1f7d"]
[ext_resource type="Texture2D" uid="uid://bs6ccq2ui2wt6" path="res://scenes/dev/ZXue/SettingScene/Assets/Level1/GameplaySettingIcon.png" id="5_18hri"]
[ext_resource type="Texture2D" uid="uid://c487i41aku4lw" path="res://scenes/dev/ZXue/SettingScene/Assets/Level1/AudioSettingIcon.png" id="6_2lid6"]
[ext_resource type="Texture2D" uid="uid://bvmtlclovt6wr" path="res://scenes/dev/ZXue/SettingScene/Assets/Level1/GraphicsSettingText.png" id="6_fquxc"]
[ext_resource type="Texture2D" uid="uid://dforvmpmi2fpp" path="res://scenes/dev/ZXue/SettingScene/Assets/Level1/GameplaySettingText.png" id="8_ry1th"]
[ext_resource type="Texture2D" uid="uid://dbwnhba4c02ea" path="res://scenes/dev/ZXue/SettingScene/Assets/Level1/AudioSettingText.png" id="10_fn1va"]
[ext_resource type="Texture2D" uid="uid://dartot8vj286h" path="res://scenes/dev/ZXue/SettingScene/Assets/Level1/SettingTopic1.png" id="12_t7jqd"]
[ext_resource type="Texture2D" uid="uid://cd1s3dd7whtgk" path="res://scenes/dev/ZXue/SettingScene/Assets/General/return.png" id="13_1o6il"]
[ext_resource type="Texture2D" uid="uid://bvdkq7a5qtx0v" path="res://scenes/dev/ZXue/SettingScene/Assets/Level_Window/topic.png" id="13_wbd35"]
[ext_resource type="Texture2D" uid="uid://dntp4jcct5liw" path="res://scenes/dev/ZXue/SettingScene/Assets/General/return_selected.png" id="14_6h68p"]
[ext_resource type="Texture2D" uid="uid://dt6wde017dub4" path="res://scenes/dev/ZXue/SettingScene/Assets/Level_Graphics/topic.png" id="16_6h68p"]
[ext_resource type="Script" uid="uid://nocjrdv2fm21" path="res://scenes/dev/ZXue/SettingScene/window_settings.gd" id="16_epc3r"]
[ext_resource type="Texture2D" uid="uid://cyx46jj0ui4vi" path="res://scenes/dev/ZXue/SettingScene/Assets/Level_Gameplay/topic.png" id="17_rpud5"]
[ext_resource type="Texture2D" uid="uid://djmb4u34fsbar" path="res://scenes/dev/ZXue/SettingScene/Assets/Level_Audio/topic.png" id="18_5jfjw"]
[ext_resource type="Script" uid="uid://dp1ra0ifr2lit" path="res://scenes/dev/ZXue/SettingScene/graphics_settings.gd" id="18_dmd27"]
[ext_resource type="Script" uid="uid://y3c6l82qw7k8" path="res://scenes/dev/ZXue/SettingScene/gameplay_settings.gd" id="20_j03ew"]
[ext_resource type="Script" uid="uid://b10gncecdyqs7" path="res://scenes/dev/ZXue/SettingScene/audio_settings.gd" id="22_6rfyv"]

[node name="SettingScene" type="Node"]
script = ExtResource("1_tgnwa")

[node name="GeneralBacklay" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_2uunf")

[node name="Level1Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Topic" type="TextureRect" parent="Level1Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("12_t7jqd")

[node name="HBoxContainer" type="HBoxContainer" parent="Level1Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -468.0
offset_top = -150.5
offset_right = 468.0
offset_bottom = 150.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 39
alignment = 1

[node name="OP1Button" type="TextureButton" parent="Level1Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_uxu67")
texture_hover = ExtResource("4_u1f7d")

[node name="Icon" type="TextureRect" parent="Level1Control/HBoxContainer/OP1Button"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_hax4q")

[node name="Text" type="TextureRect" parent="Level1Control/HBoxContainer/OP1Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_18hri")

[node name="OP2Button" type="TextureButton" parent="Level1Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_uxu67")
texture_hover = ExtResource("4_u1f7d")

[node name="Icon" type="TextureRect" parent="Level1Control/HBoxContainer/OP2Button"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_2lid6")

[node name="Text" type="TextureRect" parent="Level1Control/HBoxContainer/OP2Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_fquxc")

[node name="OP3Button" type="TextureButton" parent="Level1Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_uxu67")
texture_hover = ExtResource("4_u1f7d")

[node name="Icon" type="TextureRect" parent="Level1Control/HBoxContainer/OP3Button"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_18hri")

[node name="Text" type="TextureRect" parent="Level1Control/HBoxContainer/OP3Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("8_ry1th")

[node name="OP4Button" type="TextureButton" parent="Level1Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_uxu67")
texture_hover = ExtResource("4_u1f7d")

[node name="Icon" type="TextureRect" parent="Level1Control/HBoxContainer/OP4Button"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_2lid6")

[node name="Text" type="TextureRect" parent="Level1Control/HBoxContainer/OP4Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("10_fn1va")

[node name="ReturnButton" type="TextureButton" parent="Level1Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85600007
anchor_top = 0.84400004
anchor_right = 0.85600007
anchor_bottom = 0.84400004
offset_left = -50.11206
offset_top = -24.912048
offset_right = 49.88794
offset_bottom = 25.087952
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("13_1o6il")
texture_hover = ExtResource("14_6h68p")

[node name="WindowSettings" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("16_epc3r")

[node name="TextureRect" type="TextureRect" parent="WindowSettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.23700002
anchor_top = 0.791
anchor_right = 0.23700002
anchor_bottom = 0.791
offset_left = -309.02402
offset_top = -463.568
offset_right = 308.97598
offset_bottom = 463.432
grow_horizontal = 0
texture = ExtResource("3_hax4q")

[node name="Topic" type="TextureRect" parent="WindowSettings"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("13_wbd35")

[node name="VBoxContainer" type="VBoxContainer" parent="WindowSettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.74500006
anchor_top = 0.5
anchor_right = 0.74500006
anchor_bottom = 0.5
offset_left = -126.24005
offset_top = -154.5
offset_right = 127.25995
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="WindowedOptionButton" type="OptionButton" parent="WindowSettings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
selected = 0
item_count = 2
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="ResolutionOptionButton" type="OptionButton" parent="WindowSettings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
selected = 0
item_count = 2
popup/item_0/text = "1980*1080"
popup/item_0/id = 0
popup/item_1/text = "1280*720"
popup/item_1/id = 1

[node name="BrightnessBar" type="HSlider" parent="WindowSettings/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="VBoxContainer2" type="VBoxContainer" parent="WindowSettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.74500006
anchor_top = 0.5
anchor_right = 0.74500006
anchor_bottom = 0.5
offset_left = -706.24005
offset_top = -154.0
offset_right = -452.74005
offset_bottom = 155.0
grow_vertical = 2
theme_override_constants/separation = 12

[node name="WindowModeLabel" type="Label" parent="WindowSettings/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Window Mode"

[node name="ResolutionLabel" type="Label" parent="WindowSettings/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resolution"

[node name="BrightnessLabel" type="Label" parent="WindowSettings/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Brightness"

[node name="ReturnButton" type="TextureButton" parent="WindowSettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85600007
anchor_top = 0.84400004
anchor_right = 0.85600007
anchor_bottom = 0.84400004
offset_left = -50.11206
offset_top = -24.912048
offset_right = 49.88794
offset_bottom = 25.087952
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("13_1o6il")
texture_hover = ExtResource("14_6h68p")

[node name="GraphicsSettings" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("18_dmd27")

[node name="TextureRect" type="TextureRect" parent="GraphicsSettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.23700002
anchor_top = 0.791
anchor_right = 0.23700002
anchor_bottom = 0.791
offset_left = -309.02402
offset_top = -463.568
offset_right = 308.97598
offset_bottom = 463.432
grow_horizontal = 0
texture = ExtResource("4_2lid6")

[node name="Topic" type="TextureRect" parent="GraphicsSettings"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("16_6h68p")

[node name="VBoxContainer" type="VBoxContainer" parent="GraphicsSettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.74500006
anchor_top = 0.5
anchor_right = 0.74500006
anchor_bottom = 0.5
offset_left = -126.24005
offset_top = -154.5
offset_right = 127.25995
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="FPSLimitButton" type="OptionButton" parent="GraphicsSettings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
selected = 0
item_count = 2
popup/item_0/text = "No"
popup/item_0/id = 0
popup/item_1/text = "Yes"
popup/item_1/id = 1

[node name="FPSLimitSlider" type="HSlider" parent="GraphicsSettings/VBoxContainer" groups=["FPS Limit"]]
visible = false
layout_mode = 2
min_value = 30.0
max_value = 240.0
value = 30.0

[node name="FPSLimitManifest" type="Label" parent="GraphicsSettings/VBoxContainer" groups=["FPS Limit"]]
visible = false
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="GraphicsSettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.74500006
anchor_top = 0.5
anchor_right = 0.74500006
anchor_bottom = 0.5
offset_left = -706.24005
offset_top = -154.0
offset_right = -452.74005
offset_bottom = 155.0
grow_vertical = 2
theme_override_constants/separation = 12

[node name="FPSLockLabel" type="Label" parent="GraphicsSettings/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "FPS Lock"

[node name="FPSSliderLabel" type="Label" parent="GraphicsSettings/VBoxContainer2" groups=["FPS Limit"]]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "FPS Limit"

[node name="ReturnButton" type="TextureButton" parent="GraphicsSettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85600007
anchor_top = 0.84400004
anchor_right = 0.85600007
anchor_bottom = 0.84400004
offset_left = -50.11206
offset_top = -24.912048
offset_right = 49.88794
offset_bottom = 25.087952
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("13_1o6il")
texture_hover = ExtResource("14_6h68p")

[node name="GameplaySettings" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("20_j03ew")

[node name="TextureRect" type="TextureRect" parent="GameplaySettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.23700002
anchor_top = 0.791
anchor_right = 0.23700002
anchor_bottom = 0.791
offset_left = -309.02402
offset_top = -463.568
offset_right = 308.97598
offset_bottom = 463.432
grow_horizontal = 0
texture = ExtResource("5_18hri")

[node name="Topic" type="TextureRect" parent="GameplaySettings"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("17_rpud5")

[node name="VBoxContainer" type="VBoxContainer" parent="GameplaySettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.74500006
anchor_top = 0.5
anchor_right = 0.74500006
anchor_bottom = 0.5
offset_left = -127.24005
offset_top = -142.0
offset_right = 126.25995
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="RookieHatButton" type="CheckBox" parent="GameplaySettings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = " "

[node name="ReverseControlButton" type="CheckBox" parent="GameplaySettings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = " "

[node name="VBoxContainer2" type="VBoxContainer" parent="GameplaySettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.74500006
anchor_top = 0.5
anchor_right = 0.74500006
anchor_bottom = 0.5
offset_left = -706.24005
offset_top = -154.0
offset_right = -452.74005
offset_bottom = 155.0
grow_vertical = 2
theme_override_constants/separation = 12

[node name="RookieHatLabel" type="Label" parent="GameplaySettings/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Rookie Hat (Just a placeholder :) )"

[node name="ReverseControlLabel" type="Label" parent="GameplaySettings/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Reverse Control"

[node name="ReturnButton" type="TextureButton" parent="GameplaySettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85600007
anchor_top = 0.84400004
anchor_right = 0.85600007
anchor_bottom = 0.84400004
offset_left = -50.11206
offset_top = -24.912048
offset_right = 49.88794
offset_bottom = 25.087952
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("13_1o6il")
texture_hover = ExtResource("14_6h68p")

[node name="AudioSettings" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("22_6rfyv")

[node name="TextureRect" type="TextureRect" parent="AudioSettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.23700002
anchor_top = 0.791
anchor_right = 0.23700002
anchor_bottom = 0.791
offset_left = -309.02402
offset_top = -463.568
offset_right = 308.97598
offset_bottom = 463.432
grow_horizontal = 0
texture = ExtResource("6_2lid6")

[node name="Topic" type="TextureRect" parent="AudioSettings"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("18_5jfjw")

[node name="VBoxContainer" type="VBoxContainer" parent="AudioSettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.74500006
anchor_top = 0.5
anchor_right = 0.74500006
anchor_bottom = 0.5
offset_left = -127.24005
offset_top = -143.0
offset_right = 126.25995
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 41

[node name="MasterVolumeBar" type="HSlider" parent="AudioSettings/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="MusicVolumeBar" type="HSlider" parent="AudioSettings/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="SFXVolumeBar" type="HSlider" parent="AudioSettings/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="VBoxContainer2" type="VBoxContainer" parent="AudioSettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.74500006
anchor_top = 0.5
anchor_right = 0.74500006
anchor_bottom = 0.5
offset_left = -706.24005
offset_top = -154.0
offset_right = -452.74005
offset_bottom = 155.0
grow_vertical = 2
theme_override_constants/separation = 12

[node name="MasterVolumeLabel" type="Label" parent="AudioSettings/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Master Volume"

[node name="MusicVolumeLabel" type="Label" parent="AudioSettings/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music Volume"

[node name="SFXVolumeLabel" type="Label" parent="AudioSettings/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SFX Volume"

[node name="ReturnButton" type="TextureButton" parent="AudioSettings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85600007
anchor_top = 0.84400004
anchor_right = 0.85600007
anchor_bottom = 0.84400004
offset_left = -50.11206
offset_top = -24.912048
offset_right = 49.88794
offset_bottom = 25.087952
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("13_1o6il")
texture_hover = ExtResource("14_6h68p")

[connection signal="done_reading" from="." to="WindowSettings" method="_on_setting_scene_done_reading"]
[connection signal="done_reading" from="." to="GraphicsSettings" method="_on_setting_scene_done_reading"]
[connection signal="done_reading" from="." to="GameplaySettings" method="_on_setting_scene_done_reading"]
[connection signal="done_reading" from="." to="AudioSettings" method="_on_setting_scene_done_reading"]
[connection signal="pressed" from="Level1Control/HBoxContainer/OP1Button" to="." method="_on_op_1_button_pressed"]
[connection signal="pressed" from="Level1Control/HBoxContainer/OP2Button" to="." method="_on_op_2_button_pressed"]
[connection signal="pressed" from="Level1Control/HBoxContainer/OP3Button" to="." method="_on_op_3_button_pressed"]
[connection signal="pressed" from="Level1Control/HBoxContainer/OP4Button" to="." method="_on_op_4_button_pressed"]
[connection signal="pressed" from="Level1Control/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="item_selected" from="WindowSettings/VBoxContainer/WindowedOptionButton" to="." method="_on_windowed_option_button_item_selected"]
[connection signal="item_selected" from="WindowSettings/VBoxContainer/ResolutionOptionButton" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="value_changed" from="WindowSettings/VBoxContainer/BrightnessBar" to="." method="_on_brightness_bar_value_changed"]
[connection signal="pressed" from="WindowSettings/ReturnButton" to="." method="_window_setting_return"]
[connection signal="item_selected" from="GraphicsSettings/VBoxContainer/FPSLimitButton" to="." method="_on_fps_limit_button_item_selected"]
[connection signal="item_selected" from="GraphicsSettings/VBoxContainer/FPSLimitButton" to="GraphicsSettings" method="_on_fps_limit_button_item_selected"]
[connection signal="value_changed" from="GraphicsSettings/VBoxContainer/FPSLimitSlider" to="." method="_on_fps_limit_slider_value_changed"]
[connection signal="value_changed" from="GraphicsSettings/VBoxContainer/FPSLimitSlider" to="GraphicsSettings" method="_on_fps_limit_slider_value_changed"]
[connection signal="pressed" from="GraphicsSettings/ReturnButton" to="." method="_graphics_setting_return"]
[connection signal="pressed" from="GameplaySettings/VBoxContainer/RookieHatButton" to="." method="_on_rookie_hat_button_pressed"]
[connection signal="pressed" from="GameplaySettings/VBoxContainer/ReverseControlButton" to="." method="_on_reverse_control_button_pressed"]
[connection signal="pressed" from="GameplaySettings/ReturnButton" to="." method="_gameplay_setting_return"]
[connection signal="value_changed" from="AudioSettings/VBoxContainer/MasterVolumeBar" to="." method="_on_master_volume_bar_value_changed"]
[connection signal="value_changed" from="AudioSettings/VBoxContainer/MusicVolumeBar" to="." method="_on_music_volume_bar_value_changed"]
[connection signal="value_changed" from="AudioSettings/VBoxContainer/SFXVolumeBar" to="." method="_on_sfx_volume_bar_value_changed"]
[connection signal="pressed" from="AudioSettings/ReturnButton" to="." method="_audio_setting_return"]
